k8s/my-wrlist-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypage-deployment
  namespace: mypage-namespace
  labels:
    svc: mypage
spec:
  revisionHistoryLimit: 1 # Keep the last two revisions
  replicas: 1 # Two pods running the service
  selector:
    matchLabels:
      svc: mypage
  template:
    metadata:
      labels:
        svc: mypage
    spec:
      imagePullSecrets:
        - name: ecr-secret # ECR secret
      containers:
        - name: mypage-service
          image: 970547342771.dkr.ecr.ap-northeast-2.amazonaws.com/iteamoa/my-wrlist:80fc318 # Use ECR
          imagePullPolicy: Always # Always pull the latest image
          ports:
            - containerPort: 8080 # Check container's exposed port
