k8s/my-wrlist-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-wrlist-service
  namespace: my-namespace
spec:                                  
  selector:
    app: fargate
    svc: my-wrlist
  ports:
    - protocol: TCP
      port: 80             # Public-facing port/Service port
      targetPort: 8080       # Container port
  type: ClusterIP            # Exposes the service
